add multi,dynamic alias endpoints
